<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listView_item_date"
        android:id="@+id/listView_item_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listView_item_genreName"
        android:id="@+id/listView_item_genreName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listView_item_title"
        android:id="@+id/listView_item_title"
        android:textSize="20sp"
        android:layout_below="@+id/listView_item_date"
        android:layout_alignLeft="@+id/listView_item_date"
        android:layout_alignStart="@+id/listView_item_date"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listView_item_amount"
        android:id="@+id/listView_item_amount"
        android:textSize="20sp"
        android:layout_alignTop="@+id/listView_item_title"
        android:layout_alignRight="@+id/listView_item_genreName"
        android:layout_alignEnd="@+id/listView_item_genreName"
        android:textColor="@android:color/black" />


</RelativeLayout>